# lifegen-save-editor

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
assets/: ATTRIBUTION.md
assets/tufup/macos-x64/: 1.root.json
docs/superpowers/plans/: 2026-05-26-github-actions-release-and-autoupdate.md  2026-05-26-paste-json-and-cat-search.md  2026-05-26-tufup-auto-update-rearchitecture.md
lifegen_editor/: __init__.py  __main__.py  _version.py  paths.py
lifegen_editor/io/: __init__.py  cat_data.py  pcm.py
lifegen_editor/saves/: __init__.py  locator.py  save_io.py
lifegen_editor/sprites/: __init__.py  compositor.py  loader.py
lifegen_editor/ui/: __init__.py  editor_panel.py  main_window.py  options.py  preview.py  qt_image.py  save_panel.py
lifegen_editor/updater/: __init__.py  client.py  swap.py  tufup_client.py  ui.py
linux-x64/metadata/: root.json  snapshot.json  targets.json  timestamp.json
macos-arm64/metadata/: 1.root.json  snapshot.json  targets.json  timestamp.json
macos-x64/metadata/: snapshot.json  targets.json  timestamp.json
packaging/: build.sh  lifegen-save-editor.spec  requirements-build.txt
scripts/: make_release_manifest.py  sign_release.py  tufup_init.py  tufup_settings.py
tests/: smoke_cat_list_filter.py  smoke_clipboard_import.py  smoke_compositor.py  smoke_end_to_end.py  smoke_io.py  smoke_saves.py  smoke_updater_client.py  smoke_updater_swap.py
windows-x64/metadata/: 1.root.json  snapshot.json  targets.json  timestamp.json
(+3 files in other folders)
