[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lifegen-save-editor"
version = "1.0.0"
description = "Cross-platform GUI save editor for ClanGen and LifeGen, with full pixel-cat-maker functionality built in."
requires-python = ">=3.9"
dependencies = [
    "PySide6>=6.6",
    "Pillow>=10.0",
    "platformdirs>=4.0",
]

[project.scripts]
lifegen-save-editor = "lifegen_editor.__main__:main"

[tool.setuptools.packages.find]
include = ["lifegen_editor*"]

[tool.setuptools.package-data]
lifegen_editor = ["../assets/**/*"]
